--- a/src/shared_modules/Button/Button.css
+++ b/src/shared_modules/Button/Button.css
@@ -75,7 +75,7 @@
     position: relative; }
     .main-btn.nav-number:after {
       content: "";
-      background-image: url(../../assets/images/icons/telf.svg);
+      background-image: url(./../../assets/images/icons/telf.svg);
       background-repeat: no-repeat;
       width: 20px;
       height: 20px;
